--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
-{% extends "base.html" %}
 
 {% block content %}
-  <h1>Hello {{ name }} Welcome!</h1>
+{% if name %}
+  <h1>Hello {{ name }}, Welcome!</h1>
+{% else %}
+  <h1>Hello Welcome!</h1>
+{% endif %}
 {% endblock content %}
